objects/SCP_Certa_GC__Big_deals_Survey__c.object
<CustomObject>
    <fields>
        <fullName>SCP_Certa_GC__Necesidad_de_incorporar_personas__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Definir si existe la necesidad de incorporar personas en plantilla</description>
        <inlineHelpText>Definir si existe la necesidad de incorporar personas en plantilla</inlineHelpText>
        <label>Necesidad de incorporar personas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Nivel_de_interlocucion_con_el_cliente__c</fullName>
        <description>Definir cuál es el nivel de interlocución actual con el cliente</description>
        <inlineHelpText>Definir cuál es el nivel de interlocución actual con el cliente</inlineHelpText>
        <label>Nivel de interlocución con el cliente</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Responsable de comunicación</fullName>
                </value>
                <value>
                    <fullName>CIO / Dir. Sistemas</fullName>
                </value>
                <value>
                    <fullName>CFO / Dir. Finanzas</fullName>
                </value>
                <value>
                    <fullName>CEO / Dir. General</fullName>
                </value>
                <value>
                    <fullName>Consejo Administración / Presidencia / Ministro</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Oportunidad__c</fullName>
        <label>Oportunidad</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Questionarios_Big_deals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Pais__c</fullName>
        <description>País en el que se desarrolla el proyecto</description>
        <inlineHelpText>País en el que se desarrolla el proyecto</inlineHelpText>
        <label>País</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ARG</fullName>
                </value>
                <value>
                    <fullName>BRA</fullName>
                </value>
                <value>
                    <fullName>CHI</fullName>
                </value>
                <value>
                    <fullName>COL</fullName>
                </value>
                <value>
                    <fullName>ECU</fullName>
                </value>
                <value>
                    <fullName>PER</fullName>
                </value>
                <value>
                    <fullName>VEN</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>España</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Partners_necesarios_identificados__c</fullName>
        <defaultValue>false</defaultValue>
        <description>¿Están identificados los potenciales partners necesarios para el proyecto?</description>
        <inlineHelpText>¿Están identificados los potenciales partners necesarios para el proyecto?</inlineHelpText>
        <label>Partners necesarios estan identificados</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Personal_clave_del_cliente_identificado__c</fullName>
        <defaultValue>false</defaultValue>
        <description>¿Esta identificado y disponible el personal clave del cliente?</description>
        <inlineHelpText>¿Esta identificado y disponible el personal clave del cliente?</inlineHelpText>
        <label>Personal clave del cliente identificado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Plazo_de_ejecucion__c</fullName>
        <description>¿Cuál es el plazo de ejecución del proyecto? (meses)</description>
        <inlineHelpText>¿Cuál es el plazo de ejecución del proyecto? (meses)</inlineHelpText>
        <label>Plazo de ejecución (meses)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;6</fullName>
                </value>
                <value>
                    <fullName>&gt;12</fullName>
                </value>
                <value>
                    <fullName>&gt;24</fullName>
                </value>
                <value>
                    <fullName>&gt;36</fullName>
                </value>
                <value>
                    <fullName>&gt;60</fullName>
                </value>
                <value>
                    <fullName>&gt;120</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Porcentaje_pasivo_laboral_importe__c</fullName>
        <description>¿Es el volumen de pasivo laboral máximo significativo respecto al total del importe económico del proyecto?</description>
        <inlineHelpText>¿Es el volumen de pasivo laboral máximo significativo respecto al total del importe económico del proyecto?</inlineHelpText>
        <label>Porcentaje pasivo laboral importe</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;5%</fullName>
                </value>
                <value>
                    <fullName>3-5%</fullName>
                </value>
                <value>
                    <fullName>1-2%</fullName>
                </value>
                <value>
                    <fullName>&lt;1%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Productos_clave_estan_en_porfolio__c</fullName>
        <defaultValue>false</defaultValue>
        <description>¿Están en porfolio los productos clave necesarios para el proyecto?</description>
        <inlineHelpText>¿Están en porfolio los productos clave necesarios para el proyecto?</inlineHelpText>
        <label>Productos clave estan en porfolio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Productos_terceros_cumplen_SLA__c</fullName>
        <description>¿Los SLA&apos;s de los productos y servicios de los terceros cumplen los SLAs que pide  el cliente?</description>
        <inlineHelpText>¿Los SLA&apos;s de los productos y servicios de los terceros cumplen los SLAs que pide  el cliente?</inlineHelpText>
        <label>Productos terceros cumplen SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Escasa</fullName>
                </value>
                <value>
                    <fullName>Baja</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Alta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Responsable_comercial__c</fullName>
        <description>Nombre de nuestro responsable comercial</description>
        <inlineHelpText>Nombre de nuestro responsable comercial</inlineHelpText>
        <label>Responsable comercial</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__SLA_Detalle__c</fullName>
        <description>Detallar SLAs</description>
        <inlineHelpText>Detallar SLAs</inlineHelpText>
        <label>SLA Detalle</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__SLA_definidos__c</fullName>
        <defaultValue>false</defaultValue>
        <description>¿Hay SLAs definidos?</description>
        <inlineHelpText>¿Hay SLAs definidos?</inlineHelpText>
        <label>SLA definidos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Sector__c</fullName>
        <description>Sector de negocio</description>
        <inlineHelpText>Sector de negocio</inlineHelpText>
        <label>Sector</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AAPP</fullName>
                </value>
                <value>
                    <fullName>EEFF</fullName>
                </value>
                <value>
                    <fullName>IDS</fullName>
                </value>
                <value>
                    <fullName>Privado</fullName>
                </value>
                <value>
                    <fullName>otra</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Situacion_con_partners_favorable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>¿La situación contractual y relacional con esos partners es favorable? (no hay disputas y/o contenciosos pendientes)</description>
        <inlineHelpText>¿La situación contractual y relacional con esos partners es favorable? (no hay disputas y/o contenciosos pendientes)</inlineHelpText>
        <label>Situacion con partners favorable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Tiempo_responsabilidad_terceros__c</fullName>
        <description>¿Tiempo que dura la responsabilidad frente a terceros? (años)</description>
        <inlineHelpText>¿Tiempo que dura la responsabilidad frente a terceros? (años)</inlineHelpText>
        <label>Tiempo responsabilidad frente a terceros</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>no existe</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>&gt; 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Tipo_de_negocio__c</fullName>
        <description>Tipo de negocio</description>
        <inlineHelpText>Tipo de negocio</inlineHelpText>
        <label>Tipo de negocio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Proyecto</fullName>
                </value>
                <value>
                    <fullName>Proy + Servicio</fullName>
                </value>
                <value>
                    <fullName>Concesión/ APP/ UTE</fullName>
                </value>
                <value>
                    <fullName>otra</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Tipo_de_oportunidad__c</fullName>
        <description>Tipo de oportunidad</description>
        <inlineHelpText>Tipo de oportunidad</inlineHelpText>
        <label>Tipo de oportunidad</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Concurso público</fullName>
                </value>
                <value>
                    <fullName>APP</fullName>
                </value>
                <value>
                    <fullName>PPP</fullName>
                </value>
                <value>
                    <fullName>RFI</fullName>
                </value>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>Precualificada</fullName>
                </value>
                <value>
                    <fullName>otra</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Valor_estimado_ingresos_recurrentes__c</fullName>
        <description>Valor estimado ingresos recurrentes  durante toda la duración del contrato (MM USD)</description>
        <inlineHelpText>Valor estimado ingresos recurrentes  durante toda la duración del contrato (MM USD)</inlineHelpText>
        <label>Valor estimado ingresos recurrentes</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Valor_estimado_one_shot__c</fullName>
        <description>Valor estimado Ingresos one-shot durante toda la duración del contrato (MM USD)</description>
        <inlineHelpText>Valor estimado Ingresos one-shot durante toda la duración del contrato (MM USD)</inlineHelpText>
        <label>Valor estimado one-shot</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Valoracion_de_arquitectura_tecnica__c</fullName>
        <description>Valoración de arquitectura tecnica</description>
        <label>Valoración de arquitectura tecnica</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100%</fullName>
                </value>
                <value>
                    <fullName>90%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
                <value>
                    <fullName>70%</fullName>
                </value>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>40%</fullName>
                </value>
                <value>
                    <fullName>30%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>0%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Valoracion_de_detalle_de_SLA__c</fullName>
        <description>Valoración de detalle de SLA</description>
        <label>Valoración de detalle de SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100%</fullName>
                </value>
                <value>
                    <fullName>90%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
                <value>
                    <fullName>70%</fullName>
                </value>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>40%</fullName>
                </value>
                <value>
                    <fullName>30%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>0%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Valoracion_de_relacion_de_entregables__c</fullName>
        <description>Valoración de relacion de entregables</description>
        <label>Valoración de relacion de entregables</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100%</fullName>
                </value>
                <value>
                    <fullName>90%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
                <value>
                    <fullName>70%</fullName>
                </value>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>40%</fullName>
                </value>
                <value>
                    <fullName>30%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>0%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__arquitectura_tecnica__c</fullName>
        <description>Draft de arquitectura técnica de alto nivel</description>
        <inlineHelpText>Draft de arquitectura técnica de alto nivel</inlineHelpText>
        <label>arquitectura técnica</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__facturacion_estandar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Informar si las condiciones de facturación cumplen con nuestros estándares</description>
        <inlineHelpText>Informar si las condiciones de facturación cumplen con nuestros estándares</inlineHelpText>
        <label>facturacion estándar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__fecha_de_entrega__c</fullName>
        <description>Fecha en la que se debe entregar la oferta al cliente</description>
        <inlineHelpText>Fecha en la que se debe entregar la oferta al cliente</inlineHelpText>
        <label>fecha de entrega</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__l_neas_de_producto_principales__c</fullName>
        <description>Identificar las tres principales líneas de producto del portfolio</description>
        <inlineHelpText>Identificar las tres principales líneas de producto del portfolio</inlineHelpText>
        <label>líneas de producto principales</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fija y Movil, Voz y Datos</fullName>
                </value>
                <value>
                    <fullName>M2M</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Ehealth</fullName>
                </value>
                <value>
                    <fullName>Smart cities</fullName>
                </value>
                <value>
                    <fullName>otras</fullName>
                </value>
                <value>
                    <fullName>Seguridad</fullName>
                </value>
                <value>
                    <fullName>Big Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__porcentage_indemnizacion_total_importe__c</fullName>
        <description>¿Es significativo el volumen de indemnización máximo respecto al total del importe económico del proyecto?</description>
        <inlineHelpText>¿Es significativo el volumen de indemnización máximo respecto al total del importe económico del proyecto?</inlineHelpText>
        <label>porcentage indemnización total importe</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;100%</fullName>
                </value>
                <value>
                    <fullName>50 - 100%</fullName>
                </value>
                <value>
                    <fullName>30 - 50%</fullName>
                </value>
                <value>
                    <fullName>10 - 30%</fullName>
                </value>
                <value>
                    <fullName>&lt;10%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__porcentaje_penalizacion_incumplimiento__c</fullName>
        <description>¿Es el volumen de penalización máximo significativo respecto al total del importe económico del proyecto? (incumplimiento del nivel de servicio)</description>
        <inlineHelpText>¿Es el volumen de penalización máximo por incumplimiento del nivel de servicio significativo respecto al total del importe económico del proyecto?</inlineHelpText>
        <label>porcentaje penalización incumplimiento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;5%</fullName>
                </value>
                <value>
                    <fullName>3 - 5%</fullName>
                </value>
                <value>
                    <fullName>1 - 2%</fullName>
                </value>
                <value>
                    <fullName>&lt;1%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__porcentaje_penalizacion_resicion__c</fullName>
        <description>¿Es el volumen de penalización máximo por rescición anticipada del contrato significativo respecto al total del importe económico del proyecto?</description>
        <inlineHelpText>¿Es el volumen de penalización máximo por rescición anticipada del contrato significativo respecto al total del importe económico del proyecto?</inlineHelpText>
        <label>porcentaje penalización resicion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;5%</fullName>
                </value>
                <value>
                    <fullName>3-5%</fullName>
                </value>
                <value>
                    <fullName>1-2%</fullName>
                </value>
                <value>
                    <fullName>&lt;1%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__puntuacion_FCV_o_valor_total_de_contrato__c</fullName>
        <formula>IF(SCP_Certa_GC__FCV_o_valor_total_de_contrato__c &lt; 200, 
  IF(SCP_Certa_GC__FCV_o_valor_total_de_contrato__c &lt; 150, 
    IF(SCP_Certa_GC__FCV_o_valor_total_de_contrato__c &lt; 100,
      IF(SCP_Certa_GC__FCV_o_valor_total_de_contrato__c &lt; 75, 
        IF(SCP_Certa_GC__FCV_o_valor_total_de_contrato__c &lt; 50, 
          IF(SCP_Certa_GC__FCV_o_valor_total_de_contrato__c &lt; 20, 
            IF(SCP_Certa_GC__FCV_o_valor_total_de_contrato__c &lt; 10, 
              IF(SCP_Certa_GC__FCV_o_valor_total_de_contrato__c &lt; 5, 
                IF(SCP_Certa_GC__FCV_o_valor_total_de_contrato__c &lt; 2, 
                  IF(SCP_Certa_GC__FCV_o_valor_total_de_contrato__c == 0,
                    0,
                    10
                  ),
                  20
                ),
                30
              ),
              40
            ),
            50
          ), 
          60
        ),
        70
      ),
      80
    ),
    90
  ),
  100
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>puntuación FCV o valor total de contrato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__puntuacion_NAV_o_ingresos_12_meses__c</fullName>
        <formula>IF(SCP_Certa_GC__NAV_o_ingresos_proximos_12_meses__c &lt; 50,
  IF(SCP_Certa_GC__NAV_o_ingresos_proximos_12_meses__c &lt; 30,
    IF(SCP_Certa_GC__NAV_o_ingresos_proximos_12_meses__c &lt; 20,
      IF(SCP_Certa_GC__NAV_o_ingresos_proximos_12_meses__c &lt; 15,
        IF(SCP_Certa_GC__NAV_o_ingresos_proximos_12_meses__c &lt; 10,
          IF(SCP_Certa_GC__NAV_o_ingresos_proximos_12_meses__c &lt; 4,
            IF(SCP_Certa_GC__NAV_o_ingresos_proximos_12_meses__c &lt; 2,
              IF(SCP_Certa_GC__NAV_o_ingresos_proximos_12_meses__c &lt; 1,
                IF(SCP_Certa_GC__NAV_o_ingresos_proximos_12_meses__c &lt; 0.5,
                  IF(SCP_Certa_GC__NAV_o_ingresos_proximos_12_meses__c == 0,
                    0,
                    10
                  ),
                  20
                ),
                30
              ),
              40
            ),
            50
          ),
          60
        ),
        70
      ),
      80
    ),
    90
  ),
  100
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>puntuación NAV o ingresos 12 meses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__state__c</fullName>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Desbloqueado</fullName>
                    <default>true</default>
                    <label>Desbloqueado</label>
                </value>
                <value>
                    <fullName>Bloqueado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Cuestionario Big deals</label>
    <nameField>
        <displayFormat>QBD-{000}</displayFormat>
        <label>Numero de Cuestionario Big deals</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cuestionarios Big deals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>